--- a/lesson39/react-app/package.json
+++ b/lesson39/react-app/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "css-minimizer-webpack-plugin": "^5.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "terser-webpack-plugin": "^5.3.9"
   }
 }
